cmake_minimum_required(VERSION 3.31)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled
        Week1/evacuation.cpp
        Week1/stockCharts.cpp
        Week1/airlineCrew.cpp
        Week2/AdAllocation.cpp
        Week2/Diet.cpp
        Week2/Energy.cpp
        Week3/BudgetAllocation.cpp
        Week3/CleaningApartment.cpp
        Week3/GSMNetwork.cpp
        Week4/TravelingSalesman.cpp
        Week4/PlanParty.cpp
)
